@@ -1,0 +1,1 @@
+#empty== You don't have any contacts yet. Feel free to #{link_to_remote("create a new contact", :url => new_contact_path, :loading => "$('empty').hide()")}.
