@@ -7,15 +7,18 @@ describe "/contacts/index.html.erb" do
     login_and_assign
   end
 
-  it "should render list of accounts if list of contacts is not empty" do
-    assigns[:contacts] = [ Factory(:contact) ]
+  it "should render a list of contacts if it's not empty" do
+    assigns[:contacts] = [ Factory(:contact) ].paginate
     template.should_receive(:render).with(hash_including(:partial => "contact"))
+    template.should_receive(:render).with(:partial => "common/ajax_paginate")
     render "/contacts/index.html.haml"
   end
 
   it "should render a message if there're no contacts" do
-    assigns[:contacts] = []
+    assigns[:contacts] = [].paginate
     template.should_not_receive(:render).with(hash_including(:partial => "contact"))
+    template.should_receive(:render).with(:partial => "empty")
+    template.should_receive(:render).with(:partial => "common/ajax_paginate")
     render "/contacts/index.html.haml"
   end
 
