@@ -6,6 +6,10 @@ then you win. –- Mahatma Gandhi
 
 Fri, May 1, 2009
 ---------------------------------------------------------------------
+- Implemented Ajax pagination for Contacts.
+
+Fri, May 1, 2009
+---------------------------------------------------------------------
 - Implemented Ajax pagination for Campaigns.
 
 Thu, Apr 30, 2009
